[package]
name = "dtw_rs"
version = "0.10.1"
edition = "2024"
authors = ["Shayan Hashemi <shshemi@gmail.com>"]
keywords = ["dynamic", "time", "warping", "dtw"]
homepage = "https://github.com/shshemi/dtw-rs"
documentation = "https://docs.rs/dtw_rs/latest/dtw_rs/"
repository = "https://github.com/shshemi/dtw-rs"
readme = "README.md"
description = "A zero-dependency Dynamic Time Warping (DTW) library for Rust"
license-file = "LICENSE"
exclude = [".github/", "tests/"]

[dependencies]
serde = { version = "1.0.228", optional = true, features = ["derive"] }

[dev-dependencies]
float-cmp = "0.9.0"
serde_json = "1.0"

[features]
serde = ["dep:serde"]
